2018-04-25: László Németh (nemeth numbertext org):
	* fix platform incompabilities
	* Greek cardinal and ordinal genders

2018-04-19: László Németh (nemeth numbertext org):
	* Soros programming language: revised draft:
	- conditional text, prefix macros, language
	  variant program lines
	* improved interpreters
	* C++11 port
	* language data:
	- More functions:
	  ordinal numbers (prefix: ordinal)
	  ordinal indicator (prefix: ordinal-number)
	  year (prefix: year)
	  gender variants and other functions
	- list all functions of a module with the input "help"
	  (in Calc: =NUMBERTEXT("help"), but enlarge the
	   row height to see every line of the help text)
	- new Malaysian and Swiss Standard German
	- compressed language modules:
	- instead of hu_HU_2, ja_JP_2, zh_ZH_2,
	  "formal" prefix allows formal number names here.
	  For example, MONEYTEXT(1200;"money HUF";"hu")
	  results "egyezerkettőszáz forint" instead of
	  "ezerkétszáz forint",
	  MONEYTEXT(123;"formal";"ja") results "参百弐拾壱"
	  instead of "三百二十一"
	- instead of en_US_2, use "money" prefix combined
	  with currencies, eg. MONEYTEXT(1.01;"money USD")
	  results "one and 1/100 U.S. dollar" in LibreOffice
	  instead of "one U.S. dollar and one cent".

2016-05-24: Liudas Ališauskas
	* Fix Lithuanian module

2014-05-10: Mihovil Stanić (mihovil.stanic gmail com):
	* new Croatian module

2013-03-16: Jerzy Moruś
	* Polish translation of LibO extension resource data

2012-12-06: László Németh (nemeth numbertext org):
        * src/Soros.py, soroside.py, __init__.py, test.py:
          Python 3 port (back compatible with Python 2)
        * reg.uno.py, bin/*.py: initial patches for tabulator
          inconsistency and terminating whitespaces in Python 3
          reported by Julien2412 at libreoffice-dev.

2012-10-09: László Németh (nemeth numbertext org):
	* data/lt_LT.sor: Lithuanian module (hints by Mantas Kriaučiūnas
	  and Laimonas Vėbra (laimis) at LaunchPad #936205)
