@@ -10,9 +10,9 @@ libnumbertext_1_0_la_SOURCES = \
 	Soros.cxx Numbertext.cxx
 libnumbertext_1_0_la_LDFLAGS = -no-undefined
 
-bin_PROGRAMS =		numbertext
-numbertext_SOURCES =	numbertext.cxx
-numbertext_LDADD =	libnumbertext-1.0.la
+bin_PROGRAMS =		spellout
+spellout_SOURCES =	spellout.cxx
+spellout_LDADD =	libnumbertext-1.0.la
 
 EXTRA_DIST = numbertext-version.h  \
 	numbertext-version.h.in
